edited index.html, added inputs for madlibs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,3 +33,6 @@ footer {
     background-color: #FAF0EA;
     padding: 10px;
 }
+
+/* color and background will match
+hitting submit will change the font color with addEventListener */
