--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
 
 body {        
-    font-family: 'Titillium Web', sans-serif;
-    background-color: #FFFCFA;
+    font-family: 'Arvo', 'Fredoka One', 'Skranji', cursive;
+    background-color: #99CC00;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 300px 1fr auto;
 }
 
 main {
@@ -11,28 +11,38 @@ main {
 }
 
 header {
-    background-color: #A2D7D2;
+    /* background-color: #A2D7D2;
     height: 110px;
-    padding: 0 30px;
+    /* padding: 0 30px; */
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 header img {
-    height: 100%;
-    object-fit: contain;
+    height: 200px;
+    object-fit: cover;
+    margin: 0;
+    /* align-items: center;
+    justify-content: center; */
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 70px;
+    color: #2a7504;
     font-weight: bold;
+    /* display: grid; */
+    /* justify-content: center; */
 }
 
 footer {
-    background-color: #FAF0EA;
+    background-color: #339900;
     padding: 10px;
 }
 
 /* color and background will match
 hitting submit will change the font color with addEventListener */
+.lib {
+    font-family: 'Arvo', 'Fredoka One', 'Skranji';
+}
