clicking the button reveals the lyrics and inserts the inputs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,3 +47,6 @@ hitting submit will change the font color with addEventListener */
     font-family: 'Arvo', 'Fredoka One', 'Skranji';
 }
 
+.hidden {
+    color: #99CC00;
+}
